# crispr-design-agent

./: .gitignore  README.md  ROADMAP_CHECKLIST.md  pyproject.toml  requirements.txt
api/: app.py  app_extended.py
configs/dataset/: default.yaml
configs/model/: multimodal.yaml  multitask.yaml
docs/: agent_playbook.md  api.md  architecture.md  datasets.md  experiment_tracking.md  production_roadmap.md  structural_features.md
notebooks/: evaluate_clinvar.ipynb  evaluate_dms.ipynb
scripts/: create_synthetic_data.py  embed_features.py  extract_structure_features.py  fetch_data.py  preprocess.py  train_multitask.py
src/crispr_design_agent/: __init__.py
src/crispr_design_agent/api/: __init__.py  audit.py
src/crispr_design_agent/data/: downloaders.py  preprocess.py  sources.py
src/crispr_design_agent/evaluation/: __init__.py  metrics.py  visualization.py
src/crispr_design_agent/training/: data_module.py  module.py  multimodal_module.py
src/crispr_design_agent/utils/: io.py  logging.py
